[gd_scene load_steps=8 format=3 uid="uid://nid73bvxr4dm"]

[ext_resource type="Script" path="res://scenes/ui/options_menu/options_menu.gd" id="1_2pxmy"]
[ext_resource type="Theme" uid="uid://l28o45infhdy" path="res://scenes/ui/game.theme" id="1_sbotr"]
[ext_resource type="Shader" path="res://shaders/palette_swap.gdshader" id="3_1hblh"]
[ext_resource type="Texture2D" uid="uid://h0jq4je3xbt7" path="res://assets/graphics/palettes/warm-ochre-4-1x.png" id="4_mfjuf"]
[ext_resource type="Texture2D" uid="uid://b7m2v4p5ab82w" path="res://assets/graphics/palettes/moonlight-gb-4-1x.png" id="5_dgtqk"]
[ext_resource type="Script" path="res://scripts/nodes/ColorRectSwap.gd" id="6_gqbf0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_76weu"]
shader = ExtResource("3_1hblh")
shader_parameter/num_colors = 4
shader_parameter/invert = false
shader_parameter/base_palette = ExtResource("4_mfjuf")
shader_parameter/new_palette = ExtResource("5_dgtqk")

[node name="OptionsMenu" type="Control"]
texture_filter = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_sbotr")
script = ExtResource("1_2pxmy")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 24

[node name="BottomHBC" type="HBoxContainer" parent="Margin"]
layout_mode = 2

[node name="ControlsVBC" type="VBoxContainer" parent="Margin/BottomHBC"]
layout_mode = 2

[node name="BTN_Apply" type="Button" parent="Margin/BottomHBC/ControlsVBC"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Apply"

[node name="BTN_Back" type="Button" parent="Margin/BottomHBC/ControlsVBC"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Back"

[node name="TabContainer" type="TabContainer" parent="Margin/BottomHBC"]
custom_minimum_size = Vector2(512, 256)
layout_mode = 2

[node name="Gameplay" type="VBoxContainer" parent="Margin/BottomHBC/TabContainer"]
layout_mode = 2

[node name="LBL_MouseControls" type="Label" parent="Margin/BottomHBC/TabContainer/Gameplay"]
layout_mode = 2
text = "Mouse Controls"

[node name="HSeparator" type="HSeparator" parent="Margin/BottomHBC/TabContainer/Gameplay"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="Margin/BottomHBC/TabContainer/Gameplay"]
layout_mode = 2
columns = 2

[node name="LBL_MSensX" type="Label" parent="Margin/BottomHBC/TabContainer/Gameplay/GridContainer"]
layout_mode = 2
text = "Sensitivity X:"

[node name="SPIN_MSensX" type="SpinBox" parent="Margin/BottomHBC/TabContainer/Gameplay/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.2

[node name="Spacer1" type="Control" parent="Margin/BottomHBC/TabContainer/Gameplay/GridContainer"]
layout_mode = 2

[node name="CHECK_MInvertX" type="CheckBox" parent="Margin/BottomHBC/TabContainer/Gameplay/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Invert X"

[node name="LBL_MSensY" type="Label" parent="Margin/BottomHBC/TabContainer/Gameplay/GridContainer"]
layout_mode = 2
text = "Sensitivity Y:"

[node name="SPIN_MSensY" type="SpinBox" parent="Margin/BottomHBC/TabContainer/Gameplay/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.2

[node name="Spacer2" type="Control" parent="Margin/BottomHBC/TabContainer/Gameplay/GridContainer"]
layout_mode = 2

[node name="CHECK_MInvertY" type="CheckBox" parent="Margin/BottomHBC/TabContainer/Gameplay/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Invert Y"

[node name="Visuals" type="VBoxContainer" parent="Margin/BottomHBC/TabContainer"]
visible = false
layout_mode = 2

[node name="LBL_Palettes" type="Label" parent="Margin/BottomHBC/TabContainer/Visuals"]
layout_mode = 2
text = "Colors"

[node name="HSeparator" type="HSeparator" parent="Margin/BottomHBC/TabContainer/Visuals"]
layout_mode = 2

[node name="PaletteOptions" type="GridContainer" parent="Margin/BottomHBC/TabContainer/Visuals"]
layout_mode = 2
columns = 2

[node name="LBL_Palettes" type="Label" parent="Margin/BottomHBC/TabContainer/Visuals/PaletteOptions"]
layout_mode = 2
text = "Palette:"

[node name="Options_Palettes" type="OptionButton" parent="Margin/BottomHBC/TabContainer/Visuals/PaletteOptions"]
unique_name_in_owner = true
custom_minimum_size = Vector2(192, 0)
layout_mode = 2

[node name="Control" type="Control" parent="Margin/BottomHBC/TabContainer/Visuals/PaletteOptions"]
layout_mode = 2

[node name="CHECK_InvertColors" type="CheckBox" parent="Margin/BottomHBC/TabContainer/Visuals/PaletteOptions"]
unique_name_in_owner = true
layout_mode = 2
text = "Invert Colors"

[node name="LBL_Effects" type="Label" parent="Margin/BottomHBC/TabContainer/Visuals"]
layout_mode = 2
text = "Effects"

[node name="HSeparator2" type="HSeparator" parent="Margin/BottomHBC/TabContainer/Visuals"]
layout_mode = 2

[node name="EffectOptions" type="GridContainer" parent="Margin/BottomHBC/TabContainer/Visuals"]
layout_mode = 2
columns = 2

[node name="CHECK_EffectCRT" type="CheckBox" parent="Margin/BottomHBC/TabContainer/Visuals/EffectOptions"]
unique_name_in_owner = true
layout_mode = 2
text = "CRT"

[node name="Audio" type="VBoxContainer" parent="Margin/BottomHBC/TabContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Margin/BottomHBC/TabContainer/Audio"]
layout_mode = 2
text = "Volume"

[node name="HSeparator" type="HSeparator" parent="Margin/BottomHBC/TabContainer/Audio"]
layout_mode = 2

[node name="Volume" type="GridContainer" parent="Margin/BottomHBC/TabContainer/Audio"]
layout_mode = 2
columns = 2

[node name="LBL_VolMaster" type="Label" parent="Margin/BottomHBC/TabContainer/Audio/Volume"]
layout_mode = 2
text = "Master:"

[node name="HS_VolMaster" type="HSlider" parent="Margin/BottomHBC/TabContainer/Audio/Volume"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="LBL_VolMusic" type="Label" parent="Margin/BottomHBC/TabContainer/Audio/Volume"]
layout_mode = 2
text = "Music:"

[node name="HS_VolMusic" type="HSlider" parent="Margin/BottomHBC/TabContainer/Audio/Volume"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="LBL_VolSFX" type="Label" parent="Margin/BottomHBC/TabContainer/Audio/Volume"]
layout_mode = 2
text = "SFX:"

[node name="HS_VolSFX" type="HSlider" parent="Margin/BottomHBC/TabContainer/Audio/Volume"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRectPaletteSwap" type="ColorRect" parent="Margin"]
material = SubResource("ShaderMaterial_76weu")
layout_mode = 2
script = ExtResource("6_gqbf0")

[connection signal="pressed" from="Margin/BottomHBC/ControlsVBC/BTN_Apply" to="." method="_on_btn_apply_pressed"]
[connection signal="pressed" from="Margin/BottomHBC/ControlsVBC/BTN_Back" to="." method="_on_btn_back_pressed"]
[connection signal="value_changed" from="Margin/BottomHBC/TabContainer/Gameplay/GridContainer/SPIN_MSensX" to="." method="_on_spin_m_sens_x_value_changed"]
[connection signal="toggled" from="Margin/BottomHBC/TabContainer/Gameplay/GridContainer/CHECK_MInvertX" to="." method="_on_check_m_invert_x_toggled"]
[connection signal="value_changed" from="Margin/BottomHBC/TabContainer/Gameplay/GridContainer/SPIN_MSensY" to="." method="_on_spin_m_sens_y_value_changed"]
[connection signal="toggled" from="Margin/BottomHBC/TabContainer/Gameplay/GridContainer/CHECK_MInvertY" to="." method="_on_check_m_invert_y_toggled"]
[connection signal="item_selected" from="Margin/BottomHBC/TabContainer/Visuals/PaletteOptions/Options_Palettes" to="." method="_on_options_palettes_item_selected"]
[connection signal="toggled" from="Margin/BottomHBC/TabContainer/Visuals/PaletteOptions/CHECK_InvertColors" to="." method="_on_check_invert_colors_toggled"]
[connection signal="toggled" from="Margin/BottomHBC/TabContainer/Visuals/EffectOptions/CHECK_EffectCRT" to="." method="_on_check_effect_toggled" binds= ["CRT"]]
[connection signal="value_changed" from="Margin/BottomHBC/TabContainer/Audio/Volume/HS_VolMaster" to="." method="_on_hs_vol_master_value_changed"]
[connection signal="value_changed" from="Margin/BottomHBC/TabContainer/Audio/Volume/HS_VolMusic" to="." method="_on_hs_vol_music_value_changed"]
[connection signal="value_changed" from="Margin/BottomHBC/TabContainer/Audio/Volume/HS_VolSFX" to="." method="_on_hs_vol_sfx_value_changed"]
